--- a/pro12/src/main/webapp/WEB-INF/web.xml
+++ b/pro12/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.xhtml</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/err/err_404.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/err/err_500.jsp</location>
+  </error-page>
 </web-app>
