--- a/pro12/src/main/webapp/WEB-INF/web.xml
+++ b/pro12/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.xhtml</welcome-file>
+    
+    <welcome-file>/test02/main.jsp</welcome-file>
+    <welcome-file>/test02/add.jsp</welcome-file>
+    <welcome-file>/test02/add.html</welcome-file>
   </welcome-file-list>
   
   <error-page>
